--- a/JsFunction/index.html
+++ b/JsFunction/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Js Functions!</title>
     <script src="objectFunction.js"></script>
+    <script src="anonymoursFunction.js"></script>
 </head>
 <body>
 <h1>Javascript function!</h1>
