--- a/JsFunction/index.html
+++ b/JsFunction/index.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Js Functions!</title>
+
     <script src="objectFunction.js"></script>
     <script src="anonymoursFunction.js"></script>
+    <script src="DifferentWays.js" defer></script>
+    <script src="RockPaperScissors.js"defer></script>
 </head>
 <body>
 <h1>Javascript function!</h1>
+<button id="start">Start</button>
 
 </body>
+<!--VERY-VERY IMPORTANT NOTE: First let html element load to the page and then js code-->
+<!--<script src="DifferentWays.js"></script>-->
+
+
+<!--BUT BUT BUT if you dont want this way just write defer to let html element load first and then your js code-->
+
 </html>
