Wrote Anonymours function using a rock paper scissors game!

--- a/JsFunction/index.html
+++ b/JsFunction/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Js Functions!</title>
 
-    <script src="objectFunction.js"></script>
-    <script src="anonymoursFunction.js"></script>
-    <script src="DifferentWays.js" defer></script>
+<!--    <script src="objectFunction.js"></script>-->
+<!--    <script src="anonymoursFunction.js"></script>-->
+<!--    <script src="DifferentWays.js" defer></script>-->
     <script src="RockPaperScissors.js"defer></script>
 </head>
 <body>
