--- a/JsFunction/index.html
+++ b/JsFunction/index.html
@@ -7,8 +7,10 @@
 <!--    <script src="objectFunction.js"></script>-->
 <!--    <script src="anonymoursFunction.js"></script>-->
 <!--    <script src="DifferentWays.js" defer></script>-->
-    <script src="RockPaperScissors.js" defer></script>
+<!--    <script src="RockPaperScissors.js" defer></script>-->
+    <script src="RestFunctions.js"></script>
 </head>
+
 <body>
 <h1>Javascript function!</h1>
 <button id="start">Start</button>
