Explain how call back work in js

--- a/JsFunction/index.html
+++ b/JsFunction/index.html
@@ -8,7 +8,8 @@
 <!--    <script src="anonymoursFunction.js"></script>-->
 <!--    <script src="DifferentWays.js" defer></script>-->
 <!--    <script src="RockPaperScissors.js" defer></script>-->
-    <script src="RestFunctions.js"></script>
+<!--    <script src="RestFunctions.js"></script>-->
+    <script src="CallBack.js"></script>
 </head>
 
 <body>
