Explain Bind() in detail!

--- a/JsFunction/index.html
+++ b/JsFunction/index.html
@@ -9,7 +9,8 @@
 <!--    <script src="DifferentWays.js" defer></script>-->
 <!--    <script src="RockPaperScissors.js" defer></script>-->
 <!--    <script src="RestFunctions.js"></script>-->
-    <script src="CallBack.js"></script>
+<!--    <script src="CallBack.js"></script>-->
+    <script src="Bind.js"></script>
 </head>
 
 <body>
