innerHTML vs insertAdjecentHTML

--- a/DOM in JS/index.html
+++ b/DOM in JS/index.html
@@ -6,8 +6,18 @@
     <script src="app.js" defer></script>
 </head>
 <body>
+<header>okish</header>
 <h1>
-DOM IN JAVASCRIPT!
+
+DOM IN JAVASCRIPT!<br>
+    <button id="butn">
+        Change Color
+    </button>
+    <ul>
+        <li class="same">item1</li>
+        <li class="same">item2</li>
+        <li class="same">item3</li>
+    </ul>
 </h1>
 
 </body>
