--- a/Project on DOM/index.html
+++ b/Project on DOM/index.html
@@ -14,6 +14,8 @@
     <div class="modal__content">
         <label for="title">Movie Title</label>
         <input type="text" name="title" id="title" />
+        <label>Movies details</label>
+        <textarea id="moviesDetials" type='text' rows="5" cols="40"></textarea>
         <label for="image-url">Image URL</label>
         <input type="text" name="image-url" id="image-url" />
         <label for="rating">Your Rating</label>
@@ -44,13 +46,13 @@
 </div>
 
 <header>
-    <h1>Favorite Movies</h1>
-    <button>ADD MOVIE</button>
+    <h1>Favorite Movies / Shows</h1>
+    <button>ADD MOVIE/SHOWS</button>
 </header>
 
 <main>
-    <section id="entry-text" class="card">
-        <p>Your personal movie database!</p>
+    <section id="entry-text" class="card" >
+        <p >Your personal movie database!</p>
     </section>
     <ul id="movie-list"></ul>
 </main>
