--- a/Arrays/index.html
+++ b/Arrays/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Arrays!</title>
@@ -7,5 +7,12 @@
 </head>
 <body>
 <h1>Arrays!!!!!</h1>
+
+
+<ul>
+    <li>Apple</li>
+    <li>Orange</li>
+    <li>Guava</li>
+    </ul>
 </body>
 </html>
