--- a/Arrays/index.html
+++ b/Arrays/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Arrays!</title>
-    <script src="app.js" defer></script>
+    <script src="ArraysFunctions.js" defer></script>
 </head>
 <body>
 <h1>Arrays!!!!!</h1>
