--- a/Object/index.html
+++ b/Object/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="app.css" />
 <!--  <script src="assets/scripts/objects.js" defer></script> -->
 <!--  <script src="objectPractices!.js"></script>-->
-  <script src="moviesObject.js" defer></script>
+<!--  <script src="moviesObject.js" defer></script>-->
+  <script src="copyObject.js" defer></script>
 </head>
 <body>
 <section id="user-input" class="card">
