DOM Practice using OOP style

--- a/Practice OOP/index.html
+++ b/Practice OOP/index.html
@@ -13,14 +13,14 @@
     <header id="main-header">
       <h1>Project Planner</h1>
     </header>
-    <button id="addProject">Add Projects</button>
-    <div id="newProject" style="display: none">
-      <h2>New Project</h2>
-      Enter ID:<input id="newID"></input><br>
-      Enter Title:<input id="newTitle"></input><br>
-      Enter Extra Info:<textarea id="newExtra"></textarea><br><br>
-      <button id="done">Done</button>
-    </div>
+<!--    <button id="addProject">Add Projects</button>-->
+<!--    <div id="newProject" style="display: none">-->
+<!--      <h2>New Project</h2>-->
+<!--      Enter ID:<input id="newID"></input><br>-->
+<!--      Enter Title:<input id="newTitle"></input><br>-->
+<!--      Enter Extra Info:<textarea id="newExtra"></textarea><br><br>-->
+<!--      <button id="done">Done</button>-->
+<!--    </div>-->
     <section id="active-projects">
       <header>
         <h2>Active Projects</h2>
