--- a/Events/index.html
+++ b/Events/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Practice on Events</title>
     <script src="app.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <button>Click</button>
