hands on Events Practices!

--- a/Events/index.html
+++ b/Events/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Practice on Events</title>
@@ -8,6 +8,28 @@
 </head>
 <body>
 <button>Click</button>
+<form action="">
 
+    <div>
+            <ul id="1">
+            <input type="checkbox"> Haircut 1
+            <input type="checkbox"> Haircut 2
+            <input type="checkbox"> Haircut 3
+            </ul>
+    </div>
+    <div>
+        <ul id="2">
+            <li>List 1 </li>
+            <li>List 2 </li>
+            <li>List 3 </li>
+            <li>List 4 </li>
+            <li>List 5 </li>
+            <li>List 6 </li>
+            <li>List 7 </li>
+        </ul>
+    </div>
+
+
+</form>
 </body>
 </html>
