Brief understanding of closest event delegation!

--- a/Events/index.html
+++ b/Events/index.html
@@ -12,9 +12,10 @@
 
     <div>
             <ul id="1">
-            <input type="checkbox"> Haircut 1
-            <input type="checkbox"> Haircut 2
-            <input type="checkbox"> Haircut 3
+                <label>hairs</label>
+                   <input  type="checkbox" > Haircut 1</input>
+               <input type="checkbox"> Haircut 2</input>
+                <input type="checkbox"> Haircut 3</input>
             </ul>
     </div>
     <div>
