Events on drag!

--- a/Events/index2.html
+++ b/Events/index2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Drag and Drop</h1>
-Enter Movies <input type="textbox"><button id="addButn">Done</button></input>
+Enter Movies <input type="textbox"><button id="addButn">Okay</button></input>
 <br>
 <br>
 <div>
