Event Delegation method practice

--- a/Events/preventDefault.html
+++ b/Events/preventDefault.html
@@ -11,5 +11,8 @@
     <input type="text"></input>
     <button type="submit">Submit</button>
 </form>
+<div>
+    <button id="butn">Click</button>
+</div>
 </body>
 </html>
