--- a/Advanced Functions/Templete.html
+++ b/Advanced Functions/Templete.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Advanced Functions!</title>
+    <title>Tagged Templetes!</title>
     <script src="Script.js" defer></script>
 </head>
 <body>
 
+<h1>Tagged Templetes!</h1>
 
+<input type="text" id="1"/>
+<button id="butn">Check disount</button>
 </body>
 </html>
